logs/cocorpy27.log
Listing '.'...
Listing './bin'...
Listing './documentation'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Compiling './lib/python3.5/site-packages/Coco.py'...
***   File "./lib/python3.5/site-packages/Coco.py", line 70
    print '%s - version %s (built %s) - Ported to Python by %s (%s)\n' % ( MetaData['long_name'], MetaData['version'], MetaData['build_date'], MetaData['author'], MetaData['author_email'] )
                                                                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/Core.py'...
***   File "./lib/python3.5/site-packages/Core.py", line 454
    print sys.exc_info()[1]
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/DriverGen.py'...
***   File "./lib/python3.5/site-packages/DriverGen.py", line 53
    os.chmod(fn, 0755)
                    ^
SyntaxError: invalid token

Compiling './lib/python3.5/site-packages/Errors.py'...
***   File "./lib/python3.5/site-packages/Errors.py", line 95
    print errMsg
               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/Trace.py'...
***   File "./lib/python3.5/site-packages/Trace.py", line 91
    print 'trace output is in', Trace.fileName
                             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
